--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.7.1",
+    "@types/react-data-grid": "^4.0.1",
+    "express": "^4.16.4",
+    "mongodb": "^3.1.10",
     "react": "^16.7.0",
+    "react-data-grid": "^5.0.5",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2"
+    "react-scripts": "2.1.2",
+    "typescript": "^3.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +27,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "compilerOptions": {
+    "lib": [
+      "es2015"
+    ]
+  },
+  "proxy": "http://localhost:5000/"
 }
